
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int xps_document ;
typedef int fz_xml ;
typedef int fz_path ;
typedef int fz_context ;


 int fz_lineto (int *,int *,float,float) ;
 int fz_moveto (int *,int *,float,float) ;
 int fz_warn (int *,char*) ;
 char* fz_xml_att (int *,char*) ;
 int strcmp (char*,char*) ;
 char* xps_parse_point (int *,int *,char*,float*,float*) ;

__attribute__((used)) static void
xps_parse_poly_line_segment(fz_context *ctx, xps_document *doc, fz_path *path, fz_xml *root, int stroking, int *skipped_stroke)
{
 char *points_att = fz_xml_att(root, "Points");
 char *is_stroked_att = fz_xml_att(root, "IsStroked");
 int is_stroked;
 float x, y;
 char *s;

 if (!points_att)
 {
  fz_warn(ctx, "PolyLineSegment element has no points");
  return;
 }

 is_stroked = 1;
 if (is_stroked_att && !strcmp(is_stroked_att, "false"))
   is_stroked = 0;
 if (!is_stroked)
  *skipped_stroke = 1;

 s = points_att;
 while (*s != 0)
 {
  while (*s == ' ') s++;
  s = xps_parse_point(ctx, doc, s, &x, &y);
  if (stroking && !is_stroked)
   fz_moveto(ctx, path, x, y);
  else
   fz_lineto(ctx, path, x, y);
 }
}
